--- a/mycv.html
+++ b/mycv.html
@@ -7,117 +7,292 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
-<div id="left">
-    <div id="infor-basic">
-        <div class="hex-avatar">
-            <div class="hex-avatar-background">
-                <img src="tuyen_kun.jpg" alt=""/>
+
+<main class="main">
+    <div id="left-cv">
+        <div id="left-infor-basic">
+            <div class="hex-avatar">
+                <div class="hex-avatar-background">
+                    <img src="tuyen_kun.jpg" alt=""/>
+                </div>
+            </div>
+            <div class="text-infor">
+                <h2 class="uppercase">Tran Minh Tuyen</h2>
+                <h3>Developer</h3>
             </div>
         </div>
-        <div class="text-infor">
-            <h1>Tran Minh Tuyen</h1>
-            <h2>Developer</h2>
+        <div id="left-profile">
+            <header>
+                <div class="icon">
+                    <div class="icon-background fa-sharp fa-solid fa-file-lines"></div>
+                </div>
+                <div class="title-header uppercase">PROFILE</div>
+            </header>
+            <div class="content">
+                <p>
+                    <strong>Introduction:</strong>
+                    I am a student of Information Technology Faculty of Nong Lam University. My career goal after
+                    graduation
+                    is to become a backend-developer, building large financial systems. My hobby is playing soccer.
+                </p>
+            </div>
+        </div>
+        <div id="left-contact">
+            <header>
+                <div class="icon">
+                    <div class="icon-background fas fa-user"></div>
+                </div>
+                <div class="title-header uppercase">CONTACT ME</div>
+            </header>
+            <div class="content">
+                <ul>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fas fa-phone"></div>
+                        <div class="infor-detail-icon">+379342981</div>
+                    </li>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fas fa-envelope"></div>
+                        <div class="infor-detail-icon">trantuyen.dev.981@gmail.com</div>
+                    </li>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fas fa-earth-americas"></div>
+                        <div class="infor-detail-icon">www.tuyenkun.com</div>
+                    </li>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fas fa-location-dot"></div>
+                        <div class="infor-detail-icon">Nong Lam University</div>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="left-skills">
+            <header>
+                <div class="icon">
+                    <div class="icon-background fas fa-chart-pie"></div>
+                </div>
+                <div class="title-header uppercase">PERSONAL SKILLS</div>
+            </header>
+            <div class="content">
+                <div class="infor-skill">
+                    <div class="name-skill">JAVA</div>
+                    <div class="status-skill"
+                         style="background: linear-gradient(to right,white 70%,  #122033 30%)"></div>
+                </div>
+                <div class="infor-skill">
+                    <div class="name-skill">SQL</div>
+                    <div class="status-skill"
+                         style="background: linear-gradient(to right,white 60%,  #122033 40%)"></div>
+                </div>
+                <div class="infor-skill">
+                    <div class="name-skill">OOP</div>
+                    <div class="status-skill"
+                         style="background: linear-gradient(to right,white 65%,  #122033 35%)"></div>
+                </div>
+                <div class="infor-skill">
+                    <div class="name-skill">HTML</div>
+                    <div class="status-skill"
+                         style="background: linear-gradient(to right,white 65%,  #122033 35%)"></div>
+                </div>
+            </div>
+        </div>
+        <div id="left-connect">
+            <header>
+                <div class="icon">
+                    <div class="icon-background fas fa-users"></div>
+                </div>
+                <div class="title-header uppercase">CONNECT</div>
+            </header>
+            <div class="content">
+                <ul>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fa-brands fa-linkedin"></div>
+                        <div class="infor-detail-icon">linked.com/TuyenKun</div>
+                    </li>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fa-brands fa-facebook"></div>
+                        <div class="infor-detail-icon">facebook.com/TuyenKun</div>
+                    </li>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fa-brands fa-instagram"></div>
+                        <div class="infor-detail-icon">instagram.com/TuyenKun</div>
+                    </li>
+                    <li class="hex-icon">
+                        <div class="avatar-icon fa-brands fa-github"></div>
+                        <div class="infor-detail-icon">github.com/TuyenKun</div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-    <div id="profile">
-        <header>
-            <div class="icon">
-                <div class="icon-background fa-sharp fa-solid fa-file-lines"></div>
-            </div>
-            <div class="title-header">PROFILE</div>
-        </header>
-        <div class="content">
-            <p>
-                <strong>Introduction:</strong>
-                I am a student of Information Technology Faculty of Nong Lam University. My career goal after
-                graduation
-                is to become a backend-developer, building large financial systems. My hobby is playing soccer.
-            </p>
-        </div>
-    </div>
-    <div id="contact">
-        <header>
-            <div class="icon">
-                <div class="icon-background fas fa-user"></div>
-            </div>
-            <div class="title-header">CONTACT ME</div>
-        </header>
-        <div class="content">
-            <ul>
-                <li class="hex-icon">
-                    <div class="avatar-icon fas fa-phone"></div>
-                    <div class="infor-detail-icon">+379342981</div>
-                </li>
-                <li class="hex-icon">
-                    <div class="avatar-icon fas fa-envelope"></div>
-                    <div class="infor-detail-icon">trantuyen.dev.981@gmail.com</div>
-                </li>
-                <li class="hex-icon">
-                    <div class="avatar-icon fas fa-earth-americas"></div>
-                    <div class="infor-detail-icon">www.tuyenkun.com</div>
-                </li>
-                <li class="hex-icon">
-                    <div class="avatar-icon fas fa-location-dot"></div>
-                    <div class="infor-detail-icon">Nong Lam University</div>
-                </li>
-            </ul>
-        </div>
-    </div>
-    <div id="skills">
-        <header>
-            <div class="icon">
-                <div class="icon-background fas fa-chart-pie"></div>
-            </div>
-            <div class="title-header">PERSONAL SKILLS</div>
-        </header>
-        <div class="content">
-            <div class="infor-skill">
-                <div class="name-skill">JAVA</div>
-                <div class="status-skill" style="background: linear-gradient(to right,white 70%, #8686a4 30%)"></div>
-            </div>
-            <div class="infor-skill">
-                <div class="name-skill">SQL</div>
-                <div class="status-skill" style="background: linear-gradient(to right,white 60%, #8686a4 40%)"></div>
-            </div>
-            <div class="infor-skill">
-                <div class="name-skill">OOP</div>
-                <div class="status-skill" style="background: linear-gradient(to right,white 65%, #8686a4 35%)"></div>
-            </div>
-            <div class="infor-skill">
-                <div class="name-skill">HTML</div>
-                <div class="status-skill" style="background: linear-gradient(to right,white 65%, #8686a4 35%)"></div>
+    <div id="right-cv">
+        <div id="right-work-experience">
+            <header class="header-right">
+                <div class="icon">
+                    <div class="icon-background fa-solid fa-suitcase"></div>
+                </div>
+                <div class="title-header uppercase">WORK EXPERIENCE</div>
+            </header>
+            <div class="content">
+                <ul>
+                    <li>
+                        <span> <strong> ART DIRECTOR / </strong>COMPANY</span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    <li>
+                        <span> <strong> WEB DESIGNER / </strong>COMPANY IN PARIS</span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    </li>
+                    <li>
+                        <span> <strong> FREELANCER / </strong> 2012 - CURRENT</span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    </li>
+                    <li>
+                        <span> <strong> JUNIOR ART DIRECTOR / </strong>COMPANY</span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
-    <div id="connect">
-        <header>
-            <div class="icon">
-                <div class="icon-background fas fa-users"></div>
+        <div id="right-professional-skills">
+            <header class="header-right">
+                <div class="icon">
+                    <div class="icon-background fas fa-chart-pie"></div>
+                </div>
+                <div class="title-header uppercase">PROFESSIONAL SKILLS</div>
+            </header>
+            <div class="content">
+                <ul>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                </ul>
             </div>
-            <div class="title-header">CONNECT</div>
-        </header>
-        <div class="content">
-            <ul>
-                <li class="hex-icon">
-                    <div class="avatar-icon fa-brands fa-linkedin"></div>
-                    <div class="infor-detail-icon">linked.com/TuyenKun</div>
-                </li>
-                <li class="hex-icon">
-                    <div class="avatar-icon fa-brands fa-facebook"></div>
-                    <div class="infor-detail-icon">facebook.com/TuyenKun</div>
-                </li>
-                <li class="hex-icon">
-                    <div class="avatar-icon fa-brands fa-instagram"></div>
-                    <div class="infor-detail-icon">instagram.com/TuyenKun</div>
-                </li>
-                <li class="hex-icon">
-                    <div class="avatar-icon fa-brands fa-github"></div>
-                    <div class="infor-detail-icon">github.com/TuyenKun</div>
-                </li>
-            </ul>
+        </div>
+        <div id="right-education">
+            <header class="header-right">
+                <div class="icon">
+                    <div class="icon-background fa-regular fa-pen-to-square"></div>
+                </div>
+                <div class="title-header uppercase">EDUCATION</div>
+            </header>
+            <div class="content">
+                <ul>
+                    <li>
+                        <span> <strong> ART DIRECTOR / </strong> COMPANY</span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    <li>
+                        <span> <strong> WEB DESIGNER / </strong> COMPANY IN PARIS </span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    </li>
+                    <li>
+                        <span> <strong> FREELANCER / </strong> 2012 - CURRENT</span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    </li>
+                    <li>
+                        <span> <strong> JUNIOR ART DIRECTOR / </strong>COMPANY</span>
+                        <p>Tran Minh Tuyen 20130459</p></li>
+                    </li>
+                </ul>
+            </div>
+        </div>
+        <div id="right-proficiency">
+            <header class="header-right">
+                <div class="icon">
+                    <div class="icon-background fa-regular fa-lightbulb"></div>
+                </div>
+                <div class="title-header uppercase">PROFICIENCY</div>
+            </header>
+            <div class="content">
+                <ul>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                </ul>
+                <ul>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NETWORKING</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                        </div>
+                    </li>
+                </ul>
+            </div>
         </div>
     </div>
-</div>
-<div id="right"></div>
+</main>
+
 </body>
 </html>
