thêm nội dung cho CV

--- a/mycv.html
+++ b/mycv.html
@@ -74,22 +74,22 @@
             </header>
             <div class="content">
                 <div class="infor-skill">
-                    <div class="name-skill">JAVA</div>
+                    <div class="name-skill">SOCCER</div>
                     <div class="status-skill"
                          style="background: linear-gradient(to right,white 70%,  #122033 30%)"></div>
                 </div>
                 <div class="infor-skill">
-                    <div class="name-skill">SQL</div>
+                    <div class="name-skill">READ BOOK</div>
                     <div class="status-skill"
                          style="background: linear-gradient(to right,white 60%,  #122033 40%)"></div>
                 </div>
                 <div class="infor-skill">
-                    <div class="name-skill">OOP</div>
+                    <div class="name-skill">SWIMMING</div>
                     <div class="status-skill"
                          style="background: linear-gradient(to right,white 65%,  #122033 35%)"></div>
                 </div>
                 <div class="infor-skill">
-                    <div class="name-skill">HTML</div>
+                    <div class="name-skill">TEAM WORK</div>
                     <div class="status-skill"
                          style="background: linear-gradient(to right,white 65%,  #122033 35%)"></div>
                 </div>
@@ -135,19 +135,31 @@
             <div class="content">
                 <ul>
                     <li>
-                        <span> <strong> ART DIRECTOR / </strong>COMPANY</span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
-                    <li>
-                        <span> <strong> WEB DESIGNER / </strong>COMPANY IN PARIS</span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
+                        <span> <strong> FREELANCER / </strong> 2030 - CURRENT</span>
+                        <p>Experienced web developer with a strong background in developing award-winning applications
+                            for a diverse clientele. 10+ years of industry experience includes programming, debugging,
+                            and wireframes.</p></li>
                     </li>
                     <li>
-                        <span> <strong> FREELANCER / </strong> 2012 - CURRENT</span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
+                        <span> <strong> SENIOR BACKEND DEVELOPER / </strong>VN PAY , 2024</span>
+                        <p>Experienced web developer with a strong background in developing award-winning applications
+                            for a diverse clientele. 6+ years of industry experience includes programming, debugging,
+                            and wireframes. Received 80%+ experience scores on every web application built for VN PAY
+                            company.</p></li>
+                    <li>
+                    <li>
+                        <span> <strong> JUNIOR BACKEND DEVELOPER / </strong>MOMO , 2022</span>
+                        <p>Experienced web developer with a strong background in developing award-winning applications
+                            for a diverse clientele. 4+ years of industry experience includes programming, debugging,
+                            and wireframes. Received 80%+ experience scores on every web application built for MOMO
+                            company.</p></li>
                     </li>
                     <li>
-                        <span> <strong> JUNIOR ART DIRECTOR / </strong>COMPANY</span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
+                        <span> <strong> WEB DEVELOPER / </strong>NONG LAM UNIVERSITY , 2020</span>
+                        <p>Experienced web developer with a strong background in developing award-winning applications
+                            for a diverse clientele. 2+ years of industry experience includes programming, debugging,
+                            and wireframes. Received 80%+ experience scores on every web application built for Nong Lam
+                            company.</p>
                     </li>
                 </ul>
             </div>
@@ -165,19 +177,19 @@
                         <div class="infor-skill">
                             <div class="name-skill">NETWORKING</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 70% , #e4e3e5 30%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">WEB PROGRAMMER</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 90% , #e4e3e5 10%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">BRANDING</div>
                             <div class="status-skill"
                                  style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
                         </div>
@@ -186,23 +198,23 @@
                 <ul>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">GRAPHIC DESIGN</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 50% , #e4e3e5 50%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">DATABASE DESIGN</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 85% , #e4e3e5 15%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">SEO</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 70% , #e4e3e5 30%)"></div>
                         </div>
                     </li>
                 </ul>
@@ -218,19 +230,23 @@
             <div class="content">
                 <ul>
                     <li>
-                        <span> <strong> ART DIRECTOR / </strong> COMPANY</span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
+                        <span> <strong> STUDENT / </strong> 2020 - CURRENT</span>
+                        <p><strong>Tran Minh Tuyen: </strong>I started studying at this university in 2020 and expect to
+                            graduate in 2024.</p></li>
                     <li>
-                        <span> <strong> WEB DESIGNER / </strong> COMPANY IN PARIS </span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
+                        <span> <strong> STUDENT / </strong> 2017 - 2020 </span>
+                        <p><strong>Tran Minh Tuyen: </strong> Next, I studied high school at Mac Dinh Chi School from
+                            2017 to 2020.</p></li>
                     </li>
                     <li>
-                        <span> <strong> FREELANCER / </strong> 2012 - CURRENT</span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
+                        <span> <strong> STUDENT / </strong> 2013 - 2017</span>
+                        <p><strong>Tran Minh Tuyen: </strong> Then I moved to secondary school at Binh Tri Dong School
+                            from 2013 to 2017.</p></li>
                     </li>
                     <li>
-                        <span> <strong> JUNIOR ART DIRECTOR / </strong>COMPANY</span>
-                        <p>Tran Minh Tuyen 20130459</p></li>
+                        <span> <strong> STUDENT / </strong>2010 - 2013</span>
+                        <p><strong>Tran Minh Tuyen: </strong>I studied primary school at Binh Tri 1 School from 2010 to
+                            2013.</p></li>
                     </li>
                 </ul>
             </div>
@@ -246,46 +262,60 @@
                 <ul>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">HTML,CSS</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 70% , #e4e3e5 30%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">JAVASCRIPT</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 80% , #e4e3e5 20%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">REACT JS</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 60% , #e4e3e5 40%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">NODE JS</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 60% , #e4e3e5 40%)"></div>
                         </div>
                     </li>
                 </ul>
                 <ul>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">JAVA,C#,OOP</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 80% , #e4e3e5 20%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">SQL</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 75% , #e4e3e5 25%)"></div>
                         </div>
                     </li>
                     <li>
                         <div class="infor-skill">
-                            <div class="name-skill">NETWORKING</div>
+                            <div class="name-skill">JSP/SERVLET</div>
                             <div class="status-skill"
-                                 style="background: linear-gradient(to right , #122033 65% , #e4e3e5 35%)"></div>
+                                 style="background: linear-gradient(to right , #122033 80% , #e4e3e5 20%)"></div>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="infor-skill">
+                            <div class="name-skill">SPRING MVC</div>
+                            <div class="status-skill"
+                                 style="background: linear-gradient(to right , #122033 75% , #e4e3e5 25%)"></div>
                         </div>
                     </li>
                 </ul>
