cập nhật avatar (lấy đường dẫn hình ảnh từ FB)

--- a/mycv.html
+++ b/mycv.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>CV Trần Minh Tuyên</title>
-<!--        <link rel="stylesheet" href="mycv.css">-->
+    <!--        <link rel="stylesheet" href="mycv.css">-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
 </head>
 <body>
@@ -323,7 +323,8 @@
         <div id="left-infor-basic">
             <div class="hex-avatar">
                 <div class="hex-avatar-background">
-                    <img src="tuyen_kun.jpg" alt=""/>
+                    <img src="https://scontent.fsgn3-1.fna.fbcdn.net/v/t39.30808-6/273971354_235005388848549_7239763356888806350_n.jpg?_nc_cat=104&ccb=1-7&_nc_sid=174925&_nc_ohc=2tATP_AXxAUAX96Xzzv&tn=owPNuBeyXAwrE20Y&_nc_ht=scontent.fsgn3-1.fna&oh=00_AfAEg53qxsOGSQKCvG2ujr76-tfcQA8_BLzqQece5zDuNQ&oe=6400EE18"
+                         alt=""/>
                 </div>
             </div>
             <div class="text-infor">
